--- a/about_pascals_triangle.ipynb
+++ b/about_pascals_triangle.ipynb
@@ -115,14 +115,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "T88LcZopM-Th"
+      },
+      "source": [
+        "dentity 1 = Pascal's Formula\n",
+        "\n",
+        "Identity 2 = The Upper Summation Identity\n",
+        "\n",
+        "Pattern: They both contain Pascal's Identity"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "s_nCj0kULJAv"
       },
       "source": [
         "# Investigate A Possible Relationship\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
         "Does any row in Pascal's Triangle have the Fibonacci numbers' relationship between three consecutive entries? In other words, where x, y, and z are three consecutive entries in a single row, does x + y = z?\n",
         "\n",
         "  The number of rows where this relationship could possibly hold is:\n",
-        "  - [ ] Zero.\n",
+        "  - [x] Zero.\n",
         "  - [ ] At least one.\n",
         "  - [ ] At most one.\n",
         "  - [ ] Exactly one.\n",
@@ -139,7 +156,7 @@
         "Does any row in Pascal's Triangle have three consecutive entries in the ratio 1:2:3? (12:24:36 is an example of three numbers in a 1:2:3 ratio.)?\n",
         "\n",
         "  The number of rows where this relationship could possibly hold is:\n",
-        "  - [ ] Zero.\n",
+        "  - [x] Zero.\n",
         "  - [ ] At least one.\n",
         "  - [ ] At most one.\n",
         "  - [ ] Exactly one.\n",
