--- a/ponder_and_prove_combinatorics_and_probability.ipynb
+++ b/ponder_and_prove_combinatorics_and_probability.ipynb
@@ -94,61 +94,18 @@
         "      d += 1\n",
         "    return result"
       ],
-      "execution_count": 1,
+      "execution_count": 41,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_djel7oY5sli",
-        "outputId": "5046de8d-1532-4d9b-af99-e2261c7fde99",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "from math import floor, log2, log\n",
-        "\n",
-        "def bitsoncount(x):\n",
-        "  return bin(x).count('1')\n",
-        "\n",
-        "def prime_fact2(m):\n",
-        "  count = 0\n",
-        "  while m % 2 == 0 and m != 0: \n",
-        "        count += 1\n",
-        "        m = m // 2\n",
-        "  return count\n",
-        "\n",
-        "def two_nCn(n):\n",
-        "  return nCk(2 * n, n)\n",
-        "\n",
-        "print(two_nCn(26))\n",
-        "n = two_nCn(26)\n",
-        "print(bitsoncount(26))\n",
-        "print(prime_fact2(n))"
-      ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "495918532948104\n",
-            "3\n",
-            "3\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "fIJVGmAq5uX3",
-        "outputId": "230fa4d3-9dba-4679-a655-e9788c3cedfa",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 130
-        }
+          "height": 375
+        },
+        "outputId": "984c510a-e7f0-463a-9bcf-b42c4e9a3104"
       },
       "source": [
         "  invalid_counter = 0\n",
@@ -160,14 +117,19 @@
         "\n",
         "print(f'In the first 1000 integers there are {verify_conjecture()} that fail to follow the pattern')"
       ],
-      "execution_count": 3,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "SyntaxError",
+          "ename": "KeyboardInterrupt",
           "evalue": "ignored",
           "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-898345aaec56>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    return invalid_counter\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-12-898345aaec56>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mn\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0;32mif\u001b[0m \u001b[0mprime_fact2\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtwo_nCn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mbitsoncount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0minvalid_counter\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mreturn\u001b[0m \u001b[0minvalid_counter\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-11-c149081bf5cc>\u001b[0m in \u001b[0;36mtwo_nCn\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mtwo_nCn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mnCk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtwo_nCn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m26\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-10-cd031281acac>\u001b[0m in \u001b[0;36mnCk\u001b[0;34m(n, k)\u001b[0m\n\u001b[1;32m     12\u001b[0m       \u001b[0mg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgcd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0md\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m       \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mn\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m       \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0md\u001b[0m \u001b[0;34m//\u001b[0m \u001b[0mg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m       \u001b[0mn\u001b[0m \u001b[0;34m-=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m       \u001b[0md\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ]
@@ -204,7 +166,7 @@
         "\n",
         "bitsoncount = lambda x: bin(x).count('1')"
       ],
-      "execution_count": 8,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -222,19 +184,142 @@
         "  print(f'Tested up to {y} and found {error_new} errors')\n",
         "  continue_testing(y, error_new, step)"
       ],
-      "execution_count": 9,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lrTNjOtJEqy0"
+        "id": "lrTNjOtJEqy0",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 164
+        },
+        "outputId": "7793b243-a31d-44f5-92fe-7d3984e11e10"
       },
       "source": [
         "continue_testing(0, step=100000)"
       ],
-      "execution_count": null,
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-34f897782611>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcontinue_testing\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstep\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'continue_testing' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c8V__LvvLwjl"
+      },
+      "source": [
+        "from math import floor, log2, log\n",
+        "from math import gcd \n",
+        "\n",
+        "def nCk(n, k):\n",
+        "  if k < 0 or k > n:\n",
+        "    return 0\n",
+        "  else:\n",
+        "    result = 1\n",
+        "    d = 1\n",
+        "    g = 1\n",
+        "    m = min(k, n - k)\n",
+        "    while (d <= m):\n",
+        "      g = gcd(result, d)\n",
+        "      result = n * (result // g)\n",
+        "      result = (result // (d // g))\n",
+        "      n -= 1\n",
+        "      d += 1\n",
+        "    return result\n",
+        "\n",
+        "def bitsoncount(x):\n",
+        "  return bin(x).count('1')\n",
+        "\n",
+        "def prime_fact2(m):\n",
+        "  count = 0\n",
+        "  while m % 2 == 0 and m != 0: \n",
+        "        count += 1\n",
+        "        m = m // 2\n",
+        "  return count\n",
+        "\n",
+        "def two_nCn(n):\n",
+        "  return nCk(2 * n, n)"
+      ],
+      "execution_count": 46,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kG-YSx4RFdpD"
+      },
+      "source": [
+        "def verify_conjecture(n):\n",
+        "  exception = 0 \n",
+        "  if prime_fact2(two_nCn(n)) != bitsoncount(n):\n",
+        "    exception = 1\n",
+        "  return exception  \n"
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tlL7UVJiEMND",
+        "outputId": "7aa2258f-6909-4383-b2d6-c604f6c276b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import datetime\n",
+        "print('Started at ' + str(datetime.datetime.now()))\n",
+        "n = 1\n",
+        "exceptions = 0 \n",
+        "try:\n",
+        "  while True:\n",
+        "    exceptions += verify_conjecture(n)\n",
+        "    n += 1\n",
+        "except:    \n",
+        "    print('Verified up to ' + str(n))\n",
+        "    print(' at ' + str(datetime.datetime.now()))\n",
+        "    print( ' with ' + str(exceptions) + ' exceptions.')"
+      ],
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Started at 2021-02-05 21:54:14.542536\n",
+            "Verified up to 1850\n",
+            " at 2021-02-05 21:54:20.102679\n",
+            " with 0 exceptions.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uZZGNqYVfvME"
+      },
+      "source": [
+        "tested on local system \n",
+        "started at 2021-02-05 14:57:22.130878\n",
+        "Verified up to 27584\n",
+        " at 2021-02-06 15:37:27.084855\n",
+        " with 0 exceptions.\n"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -350,6 +435,50 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "hGg72K6mgKW0"
+      },
+      "source": [
+        "I had fun.\n",
+        "  *  my favorite part was simplifying the above equasion with my group.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MJBS_tB3ji8T"
+      },
+      "source": [
+        "I learned something new.\n",
+        "  * i downloaded python3 on my local system just to run the code for 24 hrs. i learned a lot about how it works. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "89vCQvwdkBCw"
+      },
+      "source": [
+        "I achieved something meaningful, or something I can build upon at a later time\n",
+        "  * i was able to get the code working and all the theroy questons where expounded upon"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tDNuv0Upmdep"
+      },
+      "source": [
+        "I reported who were and what contribution each of my collaborators made.\n",
+        "there are four people in my group \n",
+        "1. Matthew Read     - Was the bigest contributor to simplifying the equation in the second theory question.\n",
+        "2. Davis Kerr       - Was instremental in the first theory question \n",
+        "3. Paul Semadeni    - helped me set up python 3 on my computor \n",
+        "4. Brayden Whitlock - me "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "5iprddRs5eMP"
       },
       "source": [
@@ -380,9 +509,9 @@
         "(5 points each, 25 points total)\n",
         "- [x] I wrote a sufficient number of well-written sentences.\n",
         "- [x] My report is free of \"mechanical infelicities\" (misspelled words, grammatical errors, punctuation errors, etc.).\n",
-        "- [ ] I reported on any connections I found between this investigation and something I already know.\n",
-        "- [ ] I reported who were and what contribution each of my collaborators made.\n",
-        "- [ ] I reported on how many numbers I was able to verify with a time/computation budget of 24 hours (in a row).\n"
+        "- [x] I reported on any connections I found between this investigation and something I already know.\n",
+        "- [x] I reported who were and what contribution each of my collaborators made.\n",
+        "- [x] I reported on how many numbers I was able to verify with a time/computation budget of 24 hours (in a row).\n"
       ]
     },
     {
@@ -393,10 +522,10 @@
       "source": [
         "### What is true about my answers?\n",
         "(15 points each, 60 points total)\n",
-        "- [ ] I figured out how to run a Python program continuously for at least 24 hours.\n",
-        "- [ ] I refrained from printing out anything except the highest number I verified, knowing that printing just slows a program down.\n",
-        "- [ ] I got the right answer for the first probability theory question.\n",
-        "- [ ] I got the right answer for the second probability theory question.\n"
+        "- [x] I figured out how to run a Python program continuously for at least 24 hours.\n",
+        "- [x] I refrained from printing out anything except the highest number I verified, knowing that printing just slows a program down.\n",
+        "- [x] I got the right answer for the first probability theory question.\n",
+        "- [x] I got the right answer for the second probability theory question.\n"
       ]
     },
     {
