--- a/about_not_so_basic_probability_theory.ipynb
+++ b/about_not_so_basic_probability_theory.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "about_not_so_basic_probability_theory.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNA8bTEruI8EwWp/ARweX2o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/about_not_so_basic_probability_theory.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/about_not_so_basic_probability_theory.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -428,7 +427,7 @@
         "from math import pi\n",
         "6 / (pi ** 2)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -630,6 +629,16 @@
       },
       "source": [
         "### Your answer goes here."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LeAzWWz7-MKQ"
+      },
+      "source": [
+        "For a union of two mutually exclusive events the equasion is \n",
+        "P(A or B) = P(A) + P(B)"
       ]
     }
   ]
