--- a/06_2_About_Deeper_Probability_Theory.ipynb
+++ b/06_2_About_Deeper_Probability_Theory.ipynb
@@ -267,6 +267,190 @@
         "    1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1\n",
         "```"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q8Iwr9iXFNga"
+      },
+      "source": [
+        "def get_total_nums(max):\n",
+        "        count = 0\n",
+        "        for i in range(0, max + 1):\n",
+        "            count += i + 1\n",
+        "        return count"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UuCATtatFSsB",
+        "outputId": "5e40f800-1c6a-4ee1-e3f3-dbf1aad927a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "get_total_nums(3)"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dMAjSc8tFTpb"
+      },
+      "source": [
+        "def get_total_odds(max):\n",
+        "        count = 0\n",
+        "        for i in range(0, max + 1):\n",
+        "            count += 2 ** bin(i).count(\"1\")\n",
+        "        return count"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vtqObclUFa88",
+        "outputId": "e9fa2b24-687a-4687-9ef3-e929a1af22ca",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "get_total_odds(7)"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "27"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "76BYQWdCFb_Y",
+        "outputId": "8530775b-d230-40f4-8f80-8ac88f9541a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "get_total_odds(30) / get_total_nums(30)"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.4254032258064516"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qSQzt4fbFffF",
+        "outputId": "d3e4ed8d-f759-4225-9e8e-99c4b27054c1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "1 - get_total_odds(30) / get_total_nums(30)"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.5745967741935484"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xhFVDOCPFjbl",
+        "outputId": "609f5971-0ba4-4fa1-9d4d-73209cd133f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "print(\"P of odd number with 300 rows: \", get_total_odds(300) / get_total_nums(300))\n",
+        "print(\"P of even number with 300 rows: \", 1 - get_total_odds(300) / get_total_nums(300))\n",
+        "print(\"P of odd number with 30000 rows: \", get_total_odds(30000) / get_total_nums(30000))\n",
+        "print(\"P of even number with 30000 rows: \", 1 - get_total_odds(30000) / get_total_nums(30000))\n",
+        "print(\"P of odd number with 999999 rows: \", get_total_odds(999999) / get_total_nums(999999))\n",
+        "print(\"P of even number with 999999 rows: \", 1 - get_total_odds(999999) / get_total_nums(999999))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "P of odd number with 300 rows:  0.15935842995753668\n",
+            "P of even number with 300 rows:  0.8406415700424633\n",
+            "P of odd number with 30000 rows:  0.023748369554714818\n",
+            "P of even number with 30000 rows:  0.9762516304452852\n",
+            "P of odd number with 999999 rows:  0.005750476011523988\n",
+            "P of even number with 999999 rows:  0.994249523988476\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HI_lD_PBFl_o"
+      },
+      "source": [
+        "The bigger the paskels triangle is the closer the probability gets to 100% that the number cosen will be even. In an infinite pascals triangle the likelihood of choosing an even number will be 100%."
+      ]
     }
   ]
 }
