--- a/07_1_About_Elementary_Number_Theory.ipynb
+++ b/07_1_About_Elementary_Number_Theory.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "07_1_About_Elementary_Number_Theory.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO35p7w2JRPqh0mCPo6sfEN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/07_1_About_Elementary_Number_Theory.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/07_1_About_Elementary_Number_Theory.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -473,6 +472,15 @@
       },
       "source": [
         "Which step in the above inductive proof of FLT best connects with a basic pattern found in **some** but **NOT all** rows of Pascal's Triangle?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SSIxb-rv9Qn1"
+      },
+      "source": [
+        "I think it might be 7, because for every prime row in the triangle every number not including the 1s on either side is divisible by the row number. "
       ]
     }
   ]
