--- a/07_2_Ponder_and_Prove_Elementary_Number_Theory.ipynb
+++ b/07_2_Ponder_and_Prove_Elementary_Number_Theory.ipynb
@@ -370,7 +370,7 @@
       },
       "source": [
         "## Fun\n",
-        "Replace these words with your own detailing how you had fun (if you did)."
+        " I feel that I learned a lot in this PAP. I had fun working together as a group. "
       ]
     },
     {
@@ -380,7 +380,7 @@
       },
       "source": [
         "## New\n",
-        "Replace these words with your own detailing what was something new you learned (if anything)."
+        "I learned what a co-Prime is. I also learned how to get false primes for the FLT. I learned that any number can be made out of a multiplication of prime numbers. "
       ]
     },
     {
@@ -390,7 +390,7 @@
       },
       "source": [
         "## Meaningful\n",
-        "Replace these words with your own detailing what you achieved that was meaningful or that you can build upon."
+        "Our group desided that although we didnt fully understand the Chinese Remander Therom it would be a good thing to build on and learn more about in the future. We whent though every step in our proof and determined what each was meant to prove and how it proved it so that the proof would be of use in the future when nessesary. "
       ]
     },
     {
@@ -400,7 +400,7 @@
       },
       "source": [
         "## Other\n",
-        "Replace these words with your own describing other topics or sections of your report --- Connections, Collaborator Contributions, or anything else you feel impressed to add."
+        "I worked with the same group of people I have worked with every week on the Ponder and Prove for this class. We make sure to all contribute something. paul finds good stuff to look at online. Davis makes a really good outline of the PAP. Davis is our fact checker and I ask quastions and make sure we have a good understanding of the materiel. "
       ]
     },
     {
@@ -425,43 +425,43 @@
       "source": [
         "#@markdown ## What is True about what I did?\n",
         "#@markdown ### I had fun.\n",
-        "cb00 = False #@param {type:'boolean'}\n",
+        "cb00 = True #@param {type:'boolean'}\n",
         "#@markdown ### I learned something new.\n",
-        "cb01 = False #@param {type:'boolean'}\n",
+        "cb01 = True #@param {type:'boolean'}\n",
         "#@markdown ### I achieved something meaningful, or something I can build upon at a later time.\n",
-        "cb02 = False #@param {type:'boolean'}\n",
+        "cb02 = True #@param {type:'boolean'}\n",
         "#@markdown ## What is true about my report?\n",
         "#@markdown ### I wrote a sufficient number of well-written sentences.\n",
-        "cb03 = False #@param {type:'boolean'}\n",
+        "cb03 = True #@param {type:'boolean'}\n",
         "#@markdown ### My report is free of mechanical infelicities.\n",
-        "cb04 = False #@param {type:'boolean'}\n",
+        "cb04 = True #@param {type:'boolean'}\n",
         "#@markdown ### I used Grammarly (or something better described in my report) to check for MIs.\n",
-        "cb05 = False #@param {type:'boolean'}\n",
+        "cb05 = True #@param {type:'boolean'}\n",
         "#@markdown ### I reported on any connections I found between these problems and something I already know. \n",
-        "cb06 = False #@param {type:'boolean'}\n",
+        "cb06 = True #@param {type:'boolean'}\n",
         "#@markdown ### I reported who were and what contribution each of my collaborators made.\n",
-        "cb07 = False #@param {type:'boolean'}\n",
+        "cb07 = True #@param {type:'boolean'}\n",
         "#@markdown ## What is true about my proof?\n",
         "#@markdown ### It succinctly uses the definition of coprime.\n",
-        "cb08 = False #@param {type:'boolean'}\n",
+        "cb08 = True #@param {type:'boolean'}\n",
         "#@markdown ### It correctly uses the definition of coprime.\n",
-        "cb09 = False #@param {type:'boolean'}\n",
+        "cb09 = True #@param {type:'boolean'}\n",
         "#@markdown ### It succinctly uses a consequence of comprimality\n",
         "cb10 = False #@param {type:'boolean'}\n",
         "#@markdown ### It correctly uses a consequence of comprimality\n",
-        "cb11 = False #@param {type:'boolean'}\n",
+        "cb11 = True #@param {type:'boolean'}\n",
         "#@markdown ### It succinctly uses the factorization of the **bppp**,\n",
-        "cb12 = False #@param {type:'boolean'}\n",
+        "cb12 = True #@param {type:'boolean'}\n",
         "#@markdown ### It correctly uses the factorization of the **bppp**,\n",
-        "cb13 = False #@param {type:'boolean'}\n",
+        "cb13 = True #@param {type:'boolean'}\n",
         "#@markdown ### It succinctly uses Fermat's Little Theorem. \n",
-        "cb14 = False #@param {type:'boolean'}\n",
+        "cb14 = True #@param {type:'boolean'}\n",
         "#@markdown ### It correctly uses Fermat's Little Theorem. \n",
-        "cb15 = False #@param {type:'boolean'}\n",
+        "cb15 = True #@param {type:'boolean'}\n",
         "#@markdown ### It succinctly uses the Chinese Remainder Theorem.\n",
-        "cb16 = False #@param {type:'boolean'}\n",
+        "cb16 = True #@param {type:'boolean'}\n",
         "#@markdown ### It correctly uses the Chinese Remainder Theorem.\n",
-        "cb17 = False #@param {type:'boolean'}\n",
+        "cb17 = True #@param {type:'boolean'}\n",
         "\n"
       ],
       "execution_count": null,
