--- a/08_1_About_Encryption_Resembling_Scrambling.ipynb
+++ b/08_1_About_Encryption_Resembling_Scrambling.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "08_1_About_Encryption_Resembling_Scrambling.ipynb",
+      "name": "Copy of 08_1_About_Encryption_Resembling_Scrambling.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMNX3RDHlItJfzcnWmcXElC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/08_1_About_Encryption_Resembling_Scrambling.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/08_1_About_Encryption_Resembling_Scrambling.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -150,13 +149,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5bu0pHFPxUKj"
+        "id": "5bu0pHFPxUKj",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c847d7e-cc0b-41e6-9b7d-cb20b2fa6ab8"
       },
       "source": [
         "pow(10, 3, 2 * 11)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -179,13 +195,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "b9GLFPRWx6pP"
+        "id": "b9GLFPRWx6pP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "9183e8bc-bd29-47eb-8a1e-fa3b629c5e12"
       },
       "source": [
         "pow(10, 3, 33)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -199,7 +232,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mqsYWl5CyCCa"
+        "id": "mqsYWl5CyCCa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eae15657-d875-452e-a84e-eef12c6a0233"
       },
       "source": [
         "for m in range(22):\n",
@@ -207,12 +244,45 @@
         "  print(m, c, m == c)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 0 True\n",
+            "1 1 True\n",
+            "2 8 False\n",
+            "3 5 False\n",
+            "4 20 False\n",
+            "5 15 False\n",
+            "6 18 False\n",
+            "7 13 False\n",
+            "8 6 False\n",
+            "9 3 False\n",
+            "10 10 True\n",
+            "11 11 True\n",
+            "12 12 True\n",
+            "13 19 False\n",
+            "14 16 False\n",
+            "15 9 False\n",
+            "16 4 False\n",
+            "17 7 False\n",
+            "18 2 False\n",
+            "19 17 False\n",
+            "20 14 False\n",
+            "21 21 True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NtH0zIouyRrG"
+        "id": "NtH0zIouyRrG",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5d0ef25b-5864-4b66-a5a9-06332f14e147"
       },
       "source": [
         "for m in range(33):\n",
@@ -220,7 +290,47 @@
         "  print(m, c, m == c)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0 0 True\n",
+            "1 1 True\n",
+            "2 8 False\n",
+            "3 27 False\n",
+            "4 31 False\n",
+            "5 26 False\n",
+            "6 18 False\n",
+            "7 13 False\n",
+            "8 17 False\n",
+            "9 3 False\n",
+            "10 10 True\n",
+            "11 11 True\n",
+            "12 12 True\n",
+            "13 19 False\n",
+            "14 5 False\n",
+            "15 9 False\n",
+            "16 4 False\n",
+            "17 29 False\n",
+            "18 24 False\n",
+            "19 28 False\n",
+            "20 14 False\n",
+            "21 21 True\n",
+            "22 22 True\n",
+            "23 23 True\n",
+            "24 30 False\n",
+            "25 16 False\n",
+            "26 20 False\n",
+            "27 15 False\n",
+            "28 7 False\n",
+            "29 2 False\n",
+            "30 6 False\n",
+            "31 25 False\n",
+            "32 32 True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -261,7 +371,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZHJpGswbypA_"
+        "id": "ZHJpGswbypA_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "23b40cda-2b08-4921-f2f3-d3f747dec96d"
       },
       "source": [
         "from math import gcd\n",
@@ -288,7 +402,44 @@
         "    print(f'|{p}|{q}|{n}|{t}|{e}|{num}|/|{n}|=|{num/n/.01:.2f}|')"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "| p | q | n | t | e | # |/| n |=|   %  |\n",
+            "|---|---|---|---|---|---|-|---|-|------|\n",
+            "|2|3|6|2|3|6|/|6|=|100.00|\n",
+            "|2|5|10|4|3|6|/|10|=|60.00|\n",
+            "|2|7|14|6|5|6|/|14|=|42.86|\n",
+            "|2|11|22|10|3|6|/|22|=|27.27|\n",
+            "|2|13|26|12|5|10|/|26|=|38.46|\n",
+            "|2|17|34|16|3|6|/|34|=|17.65|\n",
+            "|2|19|38|18|5|6|/|38|=|15.79|\n",
+            "|3|5|15|8|3|9|/|15|=|60.00|\n",
+            "|3|7|21|12|5|9|/|21|=|42.86|\n",
+            "|3|11|33|20|3|9|/|33|=|27.27|\n",
+            "|3|13|39|24|5|15|/|39|=|38.46|\n",
+            "|3|17|51|32|3|9|/|51|=|17.65|\n",
+            "|3|19|57|36|5|9|/|57|=|15.79|\n",
+            "|5|7|35|24|5|15|/|35|=|42.86|\n",
+            "|5|11|55|40|3|9|/|55|=|16.36|\n",
+            "|5|13|65|48|5|25|/|65|=|38.46|\n",
+            "|5|17|85|64|3|9|/|85|=|10.59|\n",
+            "|5|19|95|72|5|15|/|95|=|15.79|\n",
+            "|7|11|77|60|7|21|/|77|=|27.27|\n",
+            "|7|13|91|72|5|15|/|91|=|16.48|\n",
+            "|7|17|119|96|5|15|/|119|=|12.61|\n",
+            "|7|19|133|108|5|9|/|133|=|6.77|\n",
+            "|11|13|143|120|7|21|/|143|=|14.69|\n",
+            "|11|17|187|160|3|9|/|187|=|4.81|\n",
+            "|11|19|209|180|7|21|/|209|=|10.05|\n",
+            "|13|17|221|192|5|25|/|221|=|11.31|\n",
+            "|13|19|247|216|5|15|/|247|=|6.07|\n",
+            "|17|19|323|288|5|15|/|323|=|4.64|\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -320,14 +471,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CVHEKvBr1BDk"
+        "id": "CVHEKvBr1BDk",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "abff8467-75b0-4f95-83d6-f66ca56a8184"
       },
       "source": [
         "e = 2 ** 16 + 1\n",
         "(e, bin(e))"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(65537, '0b10000000000000001')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4RNOE2kw5Kj-"
+      },
+      "source": [
+        "It is the only prime that is 5 digets and is also one more then the power of 2. witch makes it usefull in encryption. "
+      ]
     },
     {
       "cell_type": "markdown",
@@ -354,7 +531,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "K1CkvoOi1hIB"
+        "id": "K1CkvoOi1hIB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fdc6ea48-3c4b-4606-8a43-7d1f95d52c2e"
       },
       "source": [
         "p = 5179195214309\n",
@@ -367,6 +548,39 @@
         "c = pow(m, e, n)\n",
         "m_again = pow(c, d, n)\n",
         "(c, m_again, m == m_again)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(8966759170151112623516383, 5179195214304, True)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "29V7AKNB7Sz0"
+      },
+      "source": [
+        "It is not a good idea to use consecutive primes it would make the second prime easy to find."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f0wPRaW07ol6"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
