--- a/08_3_About_Why_RSA_Works.ipynb
+++ b/08_3_About_Why_RSA_Works.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "08_3_About_Why_RSA_Works.ipynb",
+      "name": "Copy of 08_3_About_Why_RSA_Works.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN+YmgeupA2lr/Hwt1EZDZ8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +20,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/byui-cse/cse380-notebooks/blob/master/08_3_About_Why_RSA_Works.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/brayden10/cse380-notebooks/blob/master/08_3_About_Why_RSA_Works.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -34,6 +33,28 @@
         "## Class Directed Learning\n",
         "### Due: Tuesday, 23 February 2021, 11:59 pm"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kyx6v69fuENO"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L67sWqVDuEmz"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -86,7 +107,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QZ9eRWk1gFbn"
+        "id": "QZ9eRWk1gFbn",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5138a04a-2fe9-4784-f993-5684a3ca940c"
       },
       "source": [
         "def format_congruence(x, m, r):\n",
@@ -106,7 +131,24 @@
         "  print(f, '\\n')"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "8 [=] 2 (mod 3) -> 3 | 8 - 2 (= 6) -> 6 = 3 * k where k = 2. \n",
+            "\n",
+            "8 [=] 0 (mod 4) -> 4 | 8 - 0 (= 8) -> 8 = 4 * k where k = 2. \n",
+            "\n",
+            "8 [=] 3 (mod 5) -> 5 | 8 - 3 (= 5) -> 5 = 5 * k where k = 1. \n",
+            "\n",
+            "16 [=] 1 (mod 3) -> 3 | 16 - 1 (= 15) -> 15 = 3 * k where k = 5. \n",
+            "\n",
+            "16 [=] 5 (mod 11) -> 11 | 16 - 5 (= 11) -> 11 = 11 * k where k = 1. \n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -182,7 +224,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_CKUH0bXKTeP"
+        "id": "_CKUH0bXKTeP",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "92ca3ab1-6a89-4ab4-a73f-769ccd337c09"
       },
       "source": [
         "def igcd(b, n):\n",
@@ -211,7 +257,15 @@
         "print({'p':p, 'q':q, 'n':n, 't':t, 'e':e, 'd':d, 'de':de, 'k':k})"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "{'p': 23, 'q': 29, 'n': 667, 't': 616, 'e': 3, 'd': 411, 'de': 1233, 'k': 2}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -229,6 +283,18 @@
       },
       "source": [
         "What other types of encryption are there besides RSA?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ieRqkaqlpeGw"
+      },
+      "source": [
+        "#Hashing#\n",
+        "Hashing is a technique that generates a fixed length value summarising a file or message contents. It is often incorrectly referred to as an encryption method.\n",
+        "\n",
+        "Hash functions are used with cryptography to provide digital signatures and integrity controls but as no secret key is used it does not make the message private as the hash can be recreated."
       ]
     },
     {
@@ -268,7 +334,9 @@
       "source": [
         "What is your favorite resource that you think explains RSA the best?\n",
         "\n",
-        "When you have one, enter a link to it with a brief description in the outside chat channel."
+        "When you have one, enter a link to it with a brief description in the outside chat channel.\n",
+        "\n",
+        "https://www.comparitech.com/blog/information-security/rsa-encryption/"
       ]
     }
   ]
